修改下拉選單

--- a/YCTest/Views/Home/IndexE01Partial.cshtml
+++ b/YCTest/Views/Home/IndexE01Partial.cshtml
@@ -17,7 +17,7 @@
         @Html.Label("城市：")
     </div>
     <div class="content-height-52 col-md-10 d-flex align-items-center border-start border-black">
-        @*@Html.DropDownListFor(x => x.houses.City, (IEnumerable<SelectListItem>)ViewBag.CityOptions, new { @class = "form-select" })*@
+        @Html.DropDownListFor(x => x.houses.City, (IEnumerable<SelectListItem>)ViewBag.CityOptions, new { @class = "form-select" })
         @Html.ValidationMessageFor(x => x.houses.City, "", new { @class = "text-danger" })
     </div>
 </div>
@@ -26,17 +26,17 @@
         @Html.Label("區域：")
     </div>
     <div class="content-height-52 col-md-10 d-flex align-items-center border-start border-black">
-        @*@Html.DropDownListFor(x => x.houses.Area, (IEnumerable<SelectListItem>)ViewBag.AreaOptions, new { @class = "form-select" })*@
+        @Html.DropDownListFor(x => x.houses.Area, (IEnumerable<SelectListItem>)ViewBag.AreaOptions, new { @class = "form-select" })
         @Html.ValidationMessageFor(x => x.houses.Area, "", new { @class = "text-danger" })
     </div>
 </div>
 <div class="row border border-black">
     <div class="content-height-52 bg-custom-green col-md-2 d-flex justify-content-end align-items-center">
-        @Html.Label("連絡電話：")
+        @Html.Label("地址：")
     </div>
     <div class="content-height-52 col-md-10 d-flex align-items-center border-start border-black">
-        @Html.TextBoxFor(x => x.houses.Phone, new { id = "Phone", @class = "form-control" })
-        @Html.ValidationMessageFor(x => x.houses.Phone, "", new { @class = "text-danger" })
+        @Html.TextBoxFor(x => x.houses.Address, new { id = "Address", @class = "form-control" })
+        @Html.ValidationMessageFor(x => x.houses.Address, "", new { @class = "text-danger" })
     </div>
 </div>
 
