--- a/YCTest/Views/Home/Index01Partial.cshtml
+++ b/YCTest/Views/Home/Index01Partial.cshtml
@@ -17,7 +17,7 @@
         @Html.Label("城市：")
     </div>
     <div class="content-height-52 col-md-10 d-flex align-items-center border-start border-black">
-        @*@Html.DropDownListFor(x => x.houses.City, (IEnumerable<SelectListItem>)ViewBag.CityOptions, new { @class = "form-select" })*@
+        @Html.DropDownListFor(x => x.houses.City, (IEnumerable<SelectListItem>)ViewBag.CityOptions, new { @class = "form-select" })
         @Html.ValidationMessageFor(x => x.houses.City, "", new { @class = "text-danger" })
     </div>
 </div>
@@ -26,7 +26,7 @@
         @Html.Label("區域：")
     </div>
     <div class="content-height-52 col-md-10 d-flex align-items-center border-start border-black">
-        @*@Html.DropDownListFor(x => x.houses.Area, (IEnumerable<SelectListItem>)ViewBag.AreaOptions, new { @class = "form-select" })*@
+        @Html.DropDownListFor(x => x.houses.Area, (IEnumerable<SelectListItem>)ViewBag.AreaOptions, new { @class = "form-select" })
         @Html.ValidationMessageFor(x => x.houses.Area, "", new { @class = "text-danger" })
     </div>
 </div>
